[package]
name = "rascalc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.20.0"

[dependencies]
lalrpop-util = { version = "0.20.0", features = ["lexer", "unicode"] }
clap = { version = "4.4.11", features = ["derive"] }
serde = { version = "1.0.200", features = ["derive", "rc"] }
serde_json = "1.0.117"
wasm-encoder = "0.207.0"
wasmparser = "0.207.0"
anyhow = "1.0.83"
thiserror = "1.0.60"
